--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/trabalhoapi
 spring.datasource.username=postgres
 spring.datasource.password=12300
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jackson.deserialization.fail-on-unknown-properties= true
 spring.autoconfigure.exclude[0] = org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
